Swaggerで　JWT認証グローバル設定など
